--- a/package.json
+++ b/package.json
@@ -4,14 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_PATH=./src/utils nodemon index",
-    "debug": "NODE_PATH=./src/utils  node --inspect index"
+    "start:file": "cross-env NODE_PATH=./utils nodemon file_server/server",
+    "start": "cross-env NODE_PATH=./src:./src/modules nodemon index",
+    "debug": "cross-env NODE_PATH=./src  node --inspect index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "cross-env": "^5.2.0"
