--- a/chat_screen_cast_new/package.json
+++ b/chat_screen_cast_new/package.json
@@ -9,8 +9,11 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
+    "ejs-locals": "^1.0.2",
     "express": "~4.16.1",
     "http-errors": "~1.6.3",
+    "mongodb": "^3.5.4",
+    "mongoose": "^5.9.4",
     "morgan": "~1.9.1",
     "nconf": "^0.10.0"
   }
