--- a/chat_screen_cast_new/config/config.json
+++ b/chat_screen_cast_new/config/config.json
@@ -1,5 +1,14 @@
 {
   "port": 3000,
+  "session": {
+    "secret": "KillerIsJim",
+    "key": "sid",
+    "cookie": {
+      "path": "/",
+      "httpOnly": true,
+      "maxAge": null
+    }
+  },
   "mongoose": {
     "url": "mongodb://localhost:27017/chat",
     "options": {
