--- a/chat_screen_cast_new/package.json
+++ b/chat_screen_cast_new/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.5.4",
     "mongoose": "^5.9.4",
     "morgan": "~1.9.1",
-    "nconf": "^0.10.0"
+    "nconf": "^0.10.0",
+    "socket.io": "^2.3.0"
   }
 }
