--- a/chat_screen_cast_new/package.json
+++ b/chat_screen_cast_new/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "cross-env NODE_PATH=. node ./bin/www"
   },
   "dependencies": {
     "connect-mongo": "^3.2.0",
