--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "koa": "^2.11.0",
     "mocha": "^7.1.0",
     "node-fetch": "^2.6.0"
   },
