--- a/4_koa/app/package.json
+++ b/4_koa/app/package.json
@@ -14,13 +14,19 @@
     "clarify": "^2.1.0",
     "co-busboy": "^1.4.0",
     "config": "^3.3.0",
+    "email-validator": "^2.0.4",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-convert": "^1.2.0",
     "koa-favicon": "^2.1.0",
     "koa-generic-session": "^2.0.4",
     "koa-logger": "^3.2.1",
+    "koa-session-mongoose": "^3.0.1",
     "koa-static": "^5.0.0",
+    "lodash": "^4.17.15",
+    "mongodb": "^3.5.5",
+    "mongoose": "^5.9.6",
+    "mongoose-beautiful-unique-validation": "^7.1.1",
     "pug": "^2.0.4",
     "trace": "^3.1.1"
   }
