--- a/4_koa/app/package.json
+++ b/4_koa/app/package.json
@@ -18,10 +18,12 @@
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
     "koa-convert": "^1.2.0",
+    "koa-csrf": "^3.0.8",
     "koa-favicon": "^2.1.0",
     "koa-generic-session": "^2.0.4",
     "koa-logger": "^3.2.1",
     "koa-passport": "^4.1.3",
+    "koa-session": "^5.13.1",
     "koa-session-mongoose": "^3.0.1",
     "koa-static": "^5.0.0",
     "lodash": "^4.17.15",
