--- a/4_koa/app/package.json
+++ b/4_koa/app/package.json
@@ -30,6 +30,7 @@
     "mongodb": "^3.5.5",
     "mongoose": "^5.9.6",
     "mongoose-beautiful-unique-validation": "^7.1.1",
+    "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0",
     "pug": "^2.0.4",
     "trace": "^3.1.1"
