--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "express": "^4.17.1",
     "koa": "^2.11.0",
     "mocha": "^7.1.0",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "passport-facebook-token": "^3.3.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0"
