--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "juice": "^6.0.0",
     "koa": "^2.11.0",
     "mocha": "^7.1.0",
     "node-fetch": "^2.6.0",
+    "nodemailer": "^6.4.6",
+    "nodemailer-html-to-text": "^3.1.0",
     "passport-facebook-token": "^3.3.0"
   },
   "devDependencies": {
