--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "node-fetch": "^2.6.0",
     "nodemailer": "^6.4.6",
     "nodemailer-html-to-text": "^3.1.0",
-    "passport-facebook-token": "^3.3.0"
+    "passport-facebook-token": "^3.3.0",
+    "uuid": "^8.3.0"
   },
   "devDependencies": {
     "cross-env": "^5.2.0"
